--- a/Dinamo/agregator/templates/agregator/article_list.html
+++ b/Dinamo/agregator/templates/agregator/article_list.html
@@ -2,21 +2,60 @@
 
 {% block content %}
 
-<section class="blog-list px-3 py-5 p-md-5">
-		    <div class="container">
-                {% for article in article_list %}
-                    <div class="item mb-5">
-                        <div class="media">
-                            <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="{{article.image}}" alt="image">
-                            <div class="media-body">
-                                <h3 class="title mb-1"><a href="blog-post.html">{{article.title}}</a></h3>
-                                <div class="meta mb-1"><span class="date">Published By: {{article.publishing_site}} on  {{article.publishing_date}}</span><span class="comment"> Comments<a href="#">        {{article.comment_set.count}}</a></span></div>
-                                <div class="intro">{{article.description}}</div>
-                                <a class="more-link" href="blog-post.html">Read more &rarr;</a>
-                            </div><!--//media-body-->
-                        </div><!--//media-->
-                    </div><!--//item-->
-                {% endfor %}
+
+
+<div class="container">
+        <div class="row">
+            <div class="col-lg-6>
+
+                    <div class="card-header">Search</div>
+                    <div class="card-body">
+                        <div class="input-group">
+                            <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
+                            <button class="btn btn-primary" id="button-search" type="button">Go!</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-9">
+
+                        <!-- Blog post-->
+                        {% for article in article_list %}
+                        <div class="card mb-4">
+
+                            <a href="#!"><img class="card-img-top" src="{{article.image}}" alt="..." /></a>
+                            <div class="card-body">
+                                <ol class="breadcrumb">
+                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                    <li class="breadcrumb-item"><a href="#"></a></li>
+                                    <li class="breadcrumb-item active">Data</li>
+<                               </ol>
+
+                                <h2 class="card-title h4">{{article.title}}</h2>
+                                <p class="card-text">{{article.description}}</p>
+
+                                <a class="btn btn-primary" href="#!">Read more →</a>
+                            </div>
+
+                        </div>
+                        {% endfor %}
+
+                        <!-- Blog post-->
+
+
+                <!-- Pagination-->
+                <nav aria-label="Pagination">
+                    <hr class="my-0" />
+                    <ul class="pagination justify-content-center my-4">
+                        <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
+
+                        <li class="page-item"><a class="page-link" href="#!">Older</a></li>
+                    </ul>
+                </nav>
             </div>
-</section>
+            <!-- Side widgets-->
+
+
+
+
 {% endblock content %}
