--- a/Dinamo/agregator/templates/agregator/article_list.html
+++ b/Dinamo/agregator/templates/agregator/article_list.html
@@ -26,15 +26,15 @@
                             <a href="#!"><img class="card-img-top" src="{{article.image}}" alt="..." /></a>
                             <div class="card-body">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                    <li class="breadcrumb-item"><a href="#"></a></li>
-                                    <li class="breadcrumb-item active">Data</li>
-<                               </ol>
+                                    <li class="breadcrumb-item"><a href="#">Posted : {{article.publishing_date}}</a></li>
+                                    <li class="breadcrumb-item"><a href="#">Posted by: {{article.publishing_site}}</a></li>
+                                    <li class="breadcrumb-item"><a href="#">Comments: {{article.comment_set.count}}</a></li>
+                             </ol>
 
                                 <h2 class="card-title h4">{{article.title}}</h2>
                                 <p class="card-text">{{article.description}}</p>
 
-                                <a class="btn btn-primary" href="#!">Read more →</a>
+                                <button type="button" class="btn btn-danger" ><a href="{{article.get_absolute_url}}"> Read More</a></button>
                             </div>
 
                         </div>
