--- a/Dinamo/templates/base.html
+++ b/Dinamo/templates/base.html
@@ -34,10 +34,10 @@
           <a class="nav-link" href="#">Statistics</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Gsp Articles</a>
+          <a class="nav-link" href="{% url 'gsp_articles' %}">Gsp Articles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">ProSport Articles</a>
+          <a class="nav-link" href="{% url 'prosport_articles' %}">ProSport Articles</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
