--- a/Dinamo/user/templates/user/login_form.html
+++ b/Dinamo/user/templates/user/login_form.html
@@ -1,6 +1,9 @@
 <form action="{% url 'dj-auth:login' %}" method="post">
     {% csrf_token %}
     {{form.as_p}}
+    {% if next %}
+        <input type="hidden",name="next",value="{{ next }}">
+    {% endif %}
     <button type="submit">{{login_button|default:'Log In'}}</button>
 
 </form>
