--- a/Dinamo/templates/base.html
+++ b/Dinamo/templates/base.html
@@ -18,7 +18,7 @@
         <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Dinamo Bucuresti</a>
+    <a class="navbar-brand" href="{% url 'article_list' %}">Dinamo Bucuresti</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,12 +26,10 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home
-
-          </a>
+          <a class="nav-link active" href="{% url 'article_list' %}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Statistics</a>
+          <a class="nav-link" href="{% url 'statistics' %}">Statistics</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'gsp_articles' %}">Gsp Articles</a>
@@ -46,6 +44,9 @@
           <a class="nav-link" href="#">Contact</a>
         </li>
           <li class="nav-item">
+          <a class="nav-link" href="{% url 'forum_generic' %}">Forum</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'dj-auth:login' %}?next={{request.path}}">Log In</a>
         </li>
 
