--- a/Dinamo/templates/base.html
+++ b/Dinamo/templates/base.html
@@ -46,13 +46,13 @@
           <li class="nav-item">
           <a class="nav-link" href="{% url 'forum_generic' %}">Forum</a>
         </li>
-          {% if user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'dj-auth:logout' %}">Log Out</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="{{user.profile.get_absolute_url}}">Profile</a>
-        </li>
+          {% if user.is_authenticated and user.profile %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'dj-auth:logout' %}">Log Out</a>
+            </li>
+              <li class="nav-item">
+              <a class="nav-link" href="">Profile</a>
+            </li>
           {% else %}
           <li class="nav-item">
           <a class="nav-link" href="{% url 'dj-auth:logout' %}?next={{request.path}}">Log In</a>
