--- a/Dinamo/agregator/templates/agregator/article_list.html
+++ b/Dinamo/agregator/templates/agregator/article_list.html
@@ -4,18 +4,18 @@
 
 
 
-<div class="container">
-        <div class="row">
+<div class="container" ">
+        <div class="row" >
             <div class="col-lg-6>
 
 
 
                 <div class="row">
-                    <div class="col-lg-9">
+                    <div class="col-lg-12">
 
                         <!-- Blog post-->
                         {% for article in article_list %}
-                        <div class="card mb-4">
+                        <div class="card mb-4" ">
 
                             <a href="#!"><img class="card-img-top" src="{{article.image}}" alt="..." /></a>
                             <div class="card-body">
@@ -41,9 +41,12 @@
                 <nav aria-label="Pagination">
                     <hr class="my-0" />
                     <ul class="pagination justify-content-center my-4">
-                        <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-
-                        <li class="page-item"><a class="page-link" href="#!">Older</a></li>
+                        {% if previous_page_url %}
+                        <li class="page-item "><a class="page-link" href="{{previous_page_url}}" tabindex="-1" aria-disabled="false">Newer</a></li>
+                        {% endif %}
+                        {% if next_page_url %}
+                        <li class="page-item"><a class="page-link" href="{{next_page_url}}">Older</a></li>
+                        {% endif %}
                     </ul>
                 </nav>
             </div>
