--- a/Dinamo/templates/base.html
+++ b/Dinamo/templates/base.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" >
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'article_list' %}">Dinamo Bucuresti</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="true" aria-label="Toggle navigation">
@@ -37,34 +37,42 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'prosport_articles' %}">ProSport Articles</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
+
           <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="{% url 'contact' %}">Contact</a>
         </li>
           <li class="nav-item">
           <a class="nav-link" href="{% url 'forum_generic' %}">Forum</a>
         </li>
-          {% if user.is_authenticated and user.profile %}
+          {% if user.is_authenticated  %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'dj-auth:logout' %}">Log Out</a>
             </li>
+          {% if user.profile.username %}
               <li class="nav-item">
-              <a class="nav-link" href="">Profile</a>
+              <a class="nav-link" href="{{user.profile.get_absolute_url}}">Profile</a>
             </li>
+          {% endif %}
           {% else %}
           <li class="nav-item">
-          <a class="nav-link" href="{% url 'dj-auth:logout' %}?next={{request.path}}">Log In</a>
+          <a class="nav-link" href="{% url 'dj-auth:login' %}?next={{request.path}}">Log In</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'dj-auth:signup' %}">Register</a>
           </li>
           {% endif %}
 
 
-      </ul>
+
       <form class="d-flex" >
         <input class="form-control me-sm-2" type="text" placeholder="Search" >
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
       </form>
+          {% block question_link%}
+          {% endblock question_link %}
+
+
+    </ul>
     </div>
   </div>
 </nav>
