--- a/Dinamo/agregator/templates/agregator/statistic.html
+++ b/Dinamo/agregator/templates/agregator/statistic.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon"  type="image/x-icon">
   <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.12.1/css/pro.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style2.css' %}">
-  <title>Welcome To Cleopatra</title>
+
 </head>
 <body class="bg-gray-100">
 
@@ -152,7 +152,7 @@
 
 <!-- script -->
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-<script src="js/scripts.js"></script>
+<script src="{% static 'js/scripts.js' %}"></script>
 <!-- end script -->
 
 </body>
